Fix bug where body width was overflowing viewport

--- a/app/styles/_update-notification.scss
+++ b/app/styles/_update-notification.scss
@@ -1,28 +1,32 @@
 .update-notification {
-  display: inline-block;
-  opacity: 0;
+  pointer-events: none;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 1000;
-  transform: translateX(100%);
-  transition: transform 400ms ease-in-out;
+  overflow: hidden;
   &.update-available {
-    opacity: 1;
-    transform: translateY(0);
+    pointer-events: auto;
   }
 }
 
 .update-notification-bubble {
+  visibility: hidden;
   margin-top: 8px;
   margin-right: 8px;
   border-radius: 4px;
   padding: 10px 15px;
   background-color: $blue;
+  transform: translateX(100%);
+  transition: transform 400ms ease-in-out;
   text-align: left;
   color: #fff;
   cursor: pointer;
   user-select: none;
+  .update-available & {
+    visibility: visible;
+    transform: translateX(0);
+  }
 }
 
 .update-notification-title {
